first pass at mobile header image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ description: This is my site. Welcome.
 keywords: github pages, Jekyll, foundation 6
 ---
 
+<div class="row latest-project">
+  <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
+  <div class="small-10 small-centered columns">
+    <div class="project-thumb">
+      <img src="img/demo_project_thumb.png" alt="Damgar's Latest Melbourne Development">
+    </div>
+    <h2 class="project-name">Verdis</h2>
+    <span class="project-location">Apartments, Brighton</span>
+    <span class="project-label">Latest Development</span>
+  </div>
+</div>
+
 <section role="main">
   <div class="small-12 columns">
 
