better mobile thumb

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ keywords: github pages, Jekyll, foundation 6
 <div class="row latest-project">
   <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
   <div class="small-10 small-centered columns">
-    <div class="project-thumb">
-      <img src="img/demo_project_thumb.png" alt="Damgar's Latest Melbourne Development">
+    <div class="project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne">
     </div>
     <h2 class="project-name">Verdis</h2>
     <span class="project-location">Apartments, Brighton</span>
