--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ description: This is my site. Welcome.
 keywords: github pages, Jekyll, foundation 6
 ---
 
-<div class="row latest-project">
+<div class="latest-project">
   <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
-  <div class="small-10 small-centered columns">
-    <div class="project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne">
-    </div>
+  <div class="small-12 small-centered columns">
+    <div class="project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne"></div>
+    <span class="project-label">Latest Development</span>
     <h2 class="project-name">Verdis</h2>
     <span class="project-location">Apartments, Brighton</span>
-    <span class="project-label">Latest Development</span>
   </div>
 </div>
 
