--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Whoa! Jekyll, Foundation 6, HTML5 boilerplate and github pages!
-description: This is my site. Welcome.
-keywords: github pages, Jekyll, foundation 6
+title: Damgar Property Group - Boutique Residential and Commerical Property Development Melbourne
+description: Damgar Property Group stands alone with a 100% completion rate since 1988.
+keywords: property, developer, melbourne, apartments
 ---
 
 <div class="latest-project">
@@ -17,39 +17,28 @@ keywords: github pages, Jekyll, foundation 6
 
 <section role="main">
   <div class="small-12 columns">
+    <i class="logo-spacer"></i>
 
-    <h1 class="mvl">{{ page.title }}</h1>
+    <h1 class="mvl">About Damgar</h1>
 
     <div class="row">
-      <div class="medium-9 large-7 small-centered column">
-
-        <p class="mbm">I've combined my locally installed <a href="http://foundation.zurb.com/docs/sass.html">libsass/gulp version of foundation 6</a>, <a href="http://html5boilerplate.com/">html5 boilder plate</a>, and Jekyll to be used for github pages! See <a href="http://jekyllrb.com/docs/home/">Jekyll's documentation</a>, <a href="http://foundation.zurb.com/sites/docs/">the foundation documentations</a>, and <a href="https://help.github.com/categories/20/articles">GitHub pages help pages</a>.</p>
-
-        <p class="mbl">You can see all <a href="https://github.com/daigofuji/jekyll-foundation-6-starter/tree/gh-pages"><i class="fa fa-github">
-        </i> my sources here</a>. I created this for my personal use, but if you'd like to use it, please feel free. Shout out to <a href="http://daigo.org">daigo.org</a> or <a href="http://twitter.com/DaigoFuji">@DaigoFuji</a> are appreciated, but not required.</p>
-
-        <div class="callout secondary radius mvl">
-          <p>You should probably update the <samp>_config.yml</samp> file, and edit <samp>scss/_setting.scss</samp> file. As well as <samp>scss/_custom.scss</samp>, where most the overrides are happening.</p>
-        </div>
-
+      <div class="medium-7 small-centered column">
+        <p class="lead">Established in 1988, Damgar Property Group stands alone with a 100% completion rate since the beginning.</p>
+        <p class="lead">Our dedication to ensuring our developments are fully viable from the outset means that our clients can purchase with peace of mind, knowing that their investment is rock solid.</p>
       </div>
     </div>
 
+    <br>
+
     <div class="row">
-
-      <div class="large-4 columns">
-        <p>Explore example code listed here, shows how all the html tags are rendered. Foundation takes care of those out of the box.</p>
-
+      <div class="medium-7 small-centered">
+        <div class="medium-6 columns">
+          <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
+        </div>
+        <div class="medium-6 columns">
+          <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
+        </div>
       </div>
-
-      <div class="large-4 columns">
-        <p>Another example are shown in foundation-example.html. </p>
-      </div>
-
-      <div class="large-4 columns">
-        <p>And finally, foundation's grid system, <a href="page-template-example.html">page-template-example</a> You can also <a href="http://foundation.zurb.com/templates.html">get more templates</a> from foundations home.</p>
-      </div>
-
     </div>
 
     <div class="row">
