integrate Avenir to heading styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ keywords: property, developer, melbourne, apartments
   <div class="small-12 columns">
     <i class="logo-spacer"></i>
 
-    <h1 class="mvl">About Damgar</h1>
+    <h1>About Damgar</h1>
 
     <div class="row">
       <div class="medium-7 small-centered column">
@@ -38,16 +38,6 @@ keywords: property, developer, melbourne, apartments
         <div class="medium-6 columns">
           <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
         </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="medium-9 large-7 small-centered column">
-
-        <p class="mvl">And out of the box, this supports <a href="http://fortawesome.github.io/Font-Awesome/">
-        <i class="fa fa-flag fa-lg"></i>
-        font awesome</a>, so you can go crazy with <a href="http://fortawesome.github.io/Font-Awesome/icons/">the icons</a>: <i class="fa fa-bitcoin fa-lg"></i> <i class="fa fa-cog fa-spin fa-lg"></i>. </p>
-
       </div>
     </div>
 
