--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@ description: Damgar Property Group stands alone with a 100% completion rate sinc
 keywords: property, developer, melbourne, apartments
 ---
 
-<div class="latest-project">
-  <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
-  <div class="small-12 small-centered columns">
-    <div class="project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne"></div>
-    <span class="project-label">Latest Development</span>
-    <h2 class="project-name">Verdis</h2>
-    <span class="project-location">Apartments, Brighton</span>
+<div class="project-listing latest-project">
+  <div class="row">
+    <div class="medium-10 columns small-centered">
+      <div class="column">
+        <a href="#" title="Latest Project: Verdis">
+          <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
+          <div class="project-thumb-wrapper">
+            <div class="thumbnail project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne"></div>
+          </div>
+          <h2 class="project-name">Verdis</h2>
+          <span class="project-location">Apartments, Brighton</span>
+        </a>
+        <span class="project-label">Latest Development</span>
+      </div>
+    </div>
   </div>
+
 </div>
 
 <section role="main">
