initial mobile styles for project details

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Damgar Property Group stands alone with a 100% completion rate sinc
 keywords: property, developer, melbourne, apartments
 ---
 
-<div class="project-listing latest-project">
+<div class="project-latest">
   <div class="row">
     <div class="medium-10 columns small-centered">
       <div class="column">
