--- a/projects/a-project/index.html
+++ b/projects/a-project/index.html
@@ -1,17 +1,33 @@
 ---
 layout: default
-title: Our Developments
-description: Damgar Property Group leads the market for small to medium residential and commercial property development
+title: A Project template
+description: A Damgar project template.
 ---
 
-<div class="row">
+<div class="row project-detail">
   <div class="medium-10 columns small-centered">
-    <div class="medium-8 columns">
-        <h1 class="text-left">Our Developments</h1>
-        <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
-        <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
-        <p>In addition our relationship with our Bankers-NAB and St George is first class which means our projects have always and will continue to be fully supported.
-        As builders in our own right, with a keen eye to quality and liveability, we know what it takes to get the job done and done properly</p>
+    <div class="project-thumb-wrapper">
+      <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
+    </div>
+    <div class="column">
+      <h1 class="project-name">Verdis</h1>
+      <h2 class="project-location">Apartments, Brighton</h2>
+    </div>
+  </div>
+</div>
+
+<div class="row project-detail-content">
+  <div class="medium-10 columns small-centered">
+    <div class="column">
+      <ul class="project-detail-key-points">
+        <li>asdfasdf</li>
+        <li>asdfasdf</li>
+        <li>asdfasdf</li>
+      </ul>
+      <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
+      <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
+      <p>In addition our relationship with our Bankers-NAB and St George is first class which means our projects have always and will continue to be fully supported.
+      As builders in our own right, with a keen eye to quality and liveability, we know what it takes to get the job done and done properly</p>
     </div>
   </div>
 </div>
