improve detail page text presentation

--- a/projects/a-project/index.html
+++ b/projects/a-project/index.html
@@ -5,7 +5,7 @@ description: A Damgar project template.
 ---
 
 <div class="row project-detail">
-  <div class="medium-10 columns small-centered">
+  <div class="small-11 medium-10 columns small-centered">
     <div class="project-thumb-wrapper">
       <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
     </div>
@@ -17,7 +17,7 @@ description: A Damgar project template.
 </div>
 
 <div class="row project-detail-content">
-  <div class="medium-10 columns small-centered">
+  <div class="small-11 medium-10 columns small-centered">
     <div class="column">
       <ul class="project-detail-key-points">
         <li>asdfasdf</li>
