nicer image styling

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@ keywords: property, developer, melbourne, apartments
       </div>
     </div>
   </div>
-
 </div>
 
-<section role="main">
+<div class="row">
   <div class="small-12 columns">
     <i class="logo-spacer"></i>
 
@@ -51,4 +50,4 @@ keywords: property, developer, melbourne, apartments
     </div>
 
   </div>
-</section>
+</div>
