--- a/projects/a-project/index.html
+++ b/projects/a-project/index.html
@@ -46,8 +46,22 @@ description: A Damgar project template.
   <div class="project-thumb-wrapper">
     <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
   </div>
+  <div class="row">
+    <div class="small-12 columns">
+      <caption>Detail panoramic of the project</caption>
+    </div>
+  </div>
 </div>
 
-<div class="row">
+<br><br>
 
+<div class="row">
+  <div class="medium-6 columns">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
+    <caption>Detail on this image</caption>
+  </div>
+  <div class="medium-6 columns">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
+    <caption>Detail on this image</caption>
+  </div>
 </div>
