swap demo thumb for a damgar one

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ keywords: property, developer, melbourne, apartments
   <div class="row">
     <div class="medium-10 columns small-centered">
       <div class="column">
-        <a href="#" title="Latest Project: Verdis">
+        <a href="/projects/a-project" title="Latest Project: Verdis">
           <!-- TODO: make this take the latest project from a *projects* or *posts* list -->
           <div class="project-thumb-wrapper">
-            <div class="thumbnail project-thumb" style="background-image: url('img/demo_project_thumb.png');" alt="Damgar's Latest Development, Melbourne"></div>
+            <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');" alt="Damgar's Latest Development, Melbourne"></div>
           </div>
           <h2 class="project-name">Verdis</h2>
           <span class="project-location">Apartments, Brighton</span>
