--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@ description: Damgar Property Group leads the market for small to medium resident
   <div class="large-6 columns project-listing">
     <a href="/projects/a-project" class="column">
       <div class="project-thumb-wrapper">
-        <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
+        <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
       </div>
       <h2 class="project-name">Project Name</h2>
       <span class="project-location">Location</span>
