--- a/projects/a-project/index.html
+++ b/projects/a-project/index.html
@@ -7,7 +7,7 @@ description: A Damgar project template.
 <div class="row project-detail">
   <div class="small-11 medium-10 columns small-centered">
     <div class="project-thumb-wrapper">
-      <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
+      <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
     </div>
     <div class="column">
       <h1 class="project-name">Verdis</h1>
@@ -33,8 +33,8 @@ description: A Damgar project template.
         </div>
       </div>
       <div class="medium-7 columns">
-        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
-        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
+        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
       </div>
     </div>
   </div>
@@ -44,7 +44,7 @@ description: A Damgar project template.
 
 <div class="row expanded">
   <div class="project-thumb-wrapper">
-    <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.png');"></div>
+    <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
   </div>
   <div class="row">
     <div class="small-12 columns">
@@ -57,11 +57,11 @@ description: A Damgar project template.
 
 <div class="row">
   <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
     <caption>Detail on this image</caption>
   </div>
   <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.png" alt="Image Description">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
     <caption>Detail on this image</caption>
   </div>
 </div>
