--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@ description: Damgar Property Group leads the market for small to medium resident
   <br><br>
 {% for test in (1..4) %}
   <div class="large-6 columns project-listing">
-    <a href="/projects/a-project" class="column">
+    <a href="{{site.url}}/projects/a-project" class="column">
       <div class="project-thumb-wrapper">
         <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
       </div>
