alternate detail view

--- a/projects/a-project/index.html
+++ b/projects/a-project/index.html
@@ -22,21 +22,39 @@ description: A Damgar project template.
       <div class="medium-5 columns">
         <div class="column">
           <ul class="project-detail-key-points">
-            <li>asdfasdf</li>
-            <li>asdfasdf</li>
-            <li>asdfasdf</li>
+            <li>Superb boutique development</li>
+            <li>47 one and two bedroom apartments</li>
+            <li>7 offices and 1 restaurant space</li>
+            <li>74 car spaces</li>
           </ul>
           <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
           <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
-          <p>In addition our relationship with our Bankers-NAB and St George is first class which means our projects have always and will continue to be fully supported.
-          As builders in our own right, with a keen eye to quality and liveability, we know what it takes to get the job done and done properly</p>
         </div>
       </div>
-      <div class="medium-7 columns">
-        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+      <div class="medium-5 columns float-left">
+        <div class="column">
+          <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
+          <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
+        </div>
       </div>
+      <!-- <div class="medium-7 columns">
+        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+        <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+      </div> -->
     </div>
+  </div>
+</div>
+
+<br><br>
+
+<div class="row">
+  <div class="medium-6 columns">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+    <caption>Detail on this image</caption>
+  </div>
+  <div class="medium-6 columns">
+    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+    <caption>Detail on this image</caption>
   </div>
 </div>
 
