--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -6,78 +6,56 @@ description: Testimonials from our clients.
 
 <div class="row project-detail-content">
   <div class="small-11 medium-10 medium-offset-1 columns">
-    <!-- <div class="row"> -->
-      <!-- <div class="medium-10 columns small-centered"> -->
-        <div class="column">
-          <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
-          <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
+    <div class="column">
+      <h1 class="text-left">Testimonials</h1>
 
-          <div class="testimonial-wrap">
-            <div class="row">
-              <div class="large-6 columns testimonial">
-                <div class="quote">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.</p>
-                </div>
-                <div class="testimonial-person">
-                  <div class="photo"> </div>
-                  <p>John Doe</p>
-                  <p>Important person, some Company</p>
-                </div>
-              </div>
-              <div class="large-6 columns testimonial">
-                <div class="quote">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.  </p>
-                </div>
-                <div class="testimonial-person">
-                  <div class="photo"> </div>
-                  <p>John Doe</p>
-                  <p>Important person, some Company</p>
-                </div>
-              </div>
+      <div class="row">
+        <div class="medium-8 columns">
+          <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah. Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah blah. </p>
+          <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah. </p>
+        </div>
+      </div>
+
+      <br><br>
+
+      <div class="testimonial-wrap">
+        <div class="row">
+          <div class="large-6 columns testimonial">
+            <div class="quote">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.</p>
+            </div>
+            <div class="testimonial-person">
+              <div class="photo"> </div>
+              <p>John Doe</p>
+              <p>Important person, some Company</p>
             </div>
           </div>
-
+          <div class="large-6 columns testimonial">
+            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+          </div>
         </div>
-      <!-- </div> -->
-    <!-- </div> -->
-  </div>
-</div>
+      </div>
 
-<br><br>
+      <br><br><br>
 
-<div class="row">
-  <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-    <caption>Detail on this image</caption>
-  </div>
-  <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-    <caption>Detail on this image</caption>
-  </div>
-</div>
+      <div class="testimonial-wrap">
+        <div class="row">
+          <div class="large-6 columns testimonial">
+            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+          </div>
+          <div class="large-6 columns testimonial">
+            <div class="quote">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.  </p>
+            </div>
+            <div class="testimonial-person">
+              <div class="photo"> </div>
+              <p>John Doe</p>
+              <p>Important person, some Company</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<br><br>
-
-<div class="row expanded">
-  <div class="project-thumb-wrapper">
-    <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
-  </div>
-  <div class="row">
-    <div class="small-12 columns">
-      <caption>Detail panoramic of the project</caption>
     </div>
-  </div>
-</div>
-
-<br><br>
-
-<div class="row">
-  <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-    <caption>Detail on this image</caption>
-  </div>
-  <div class="medium-6 columns">
-    <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-    <caption>Detail on this image</caption>
   </div>
 </div>
