--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -16,18 +16,20 @@ description: Testimonials from our clients.
         </div>
       </div>
 
-      <br><br>
+      <br><br><br>
 
       <div class="testimonial-wrap">
         <div class="row">
           <div class="large-6 columns testimonial">
             <div class="quote">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.</p>
+              <p>The whole process from initial discussions through to settlement was extremely simple, with the property delivered on time and issue free.</p>
+              <p>The quality of the final product was outstanding, inside and out, meaning I got to choose from a range of suitable tenants.</p>
+              <p>It’s the best run apartment development I’ve been involved with.</p>
             </div>
             <div class="testimonial-person">
-              <div class="photo"> </div>
-              <p>John Doe</p>
-              <p>Important person, some Company</p>
+              <img class="photo" src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_100_100/p/8/005/059/05c/356707f.jpg" alt="Steve Abbot's LinkedIn image"></img>
+              <p>Steve Abbott</p>
+              <p>Chief Operating Officer, Fenner Dunlop Australia</p>
             </div>
           </div>
           <div class="large-6 columns testimonial">
@@ -45,12 +47,13 @@ description: Testimonials from our clients.
           </div>
           <div class="large-6 columns testimonial">
             <div class="quote">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.  </p>
+              <p>I purchased off the plan. Being the first investment property I have purchased I wasn't exactly sure what I was in for. However, the Damgar team were incredibly easy to deal with and made things really simple.</p>
+              <p>I was kept up to date right through the construction process and inspected the property prior to settlement. The apartment was in great condition and I have had tenants from day 1 who have been very happy with the property.</p>
             </div>
             <div class="testimonial-person">
-              <div class="photo"> </div>
-              <p>John Doe</p>
-              <p>Important person, some Company</p>
+              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1c6/31e/24aba0c.jpg" alt="Brad Ellis' LinkedIn image"> </img>
+              <p>Brad Ellis</p>
+              <p>General Manager Human Resources, Coles Supermarkets</p>
             </div>
           </div>
         </div>
