--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@ description: Testimonials from our clients.
 ---
 
 <div class="row project-detail-content">
-  <div class="small-11 medium-10 medium-offset-1 columns">
+  <div class="medium-10 medium-offset-1 columns">
     <div class="column">
       <h1 class="text-left">Testimonials</h1>
 
@@ -13,6 +13,35 @@ description: Testimonials from our clients.
         <div class="medium-8 columns">
           <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah. Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah blah. </p>
           <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah. </p>
+        </div>
+      </div>
+
+      <br><br><br>
+
+      <div class="testimonial-wrap">
+        <div class="row">
+          <div class="large-6 columns testimonial">
+            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+          </div>
+          <div class="large-6 columns testimonial">
+            <div class="quote">
+              <p>I purchased off the plan. Being the first investment property I have purchased I wasn't exactly sure what I was in for. However, the Damgar team were incredibly easy to deal with and made things really simple.</p>
+              <p>I was kept up to date right through the construction process and inspected the property prior to settlement. The apartment was in great condition and I have had tenants from day 1 who have been very happy with the property.</p>
+            </div>
+            <div class="testimonial-person">
+              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1c6/31e/24aba0c.jpg" alt="Brad Ellis' LinkedIn image"> </img>
+              <p>Brad Ellis</p>
+              <p>General Manager Human Resources, Coles Supermarkets</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row testimonial-wrap">
+        <div class="large-8 columns small-centered">
+          <div class="flex-video widescreen">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
 
@@ -34,27 +63,6 @@ description: Testimonials from our clients.
           </div>
           <div class="large-6 columns testimonial">
             <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-          </div>
-        </div>
-      </div>
-
-      <br><br><br>
-
-      <div class="testimonial-wrap">
-        <div class="row">
-          <div class="large-6 columns testimonial">
-            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
-          </div>
-          <div class="large-6 columns testimonial">
-            <div class="quote">
-              <p>I purchased off the plan. Being the first investment property I have purchased I wasn't exactly sure what I was in for. However, the Damgar team were incredibly easy to deal with and made things really simple.</p>
-              <p>I was kept up to date right through the construction process and inspected the property prior to settlement. The apartment was in great condition and I have had tenants from day 1 who have been very happy with the property.</p>
-            </div>
-            <div class="testimonial-person">
-              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1c6/31e/24aba0c.jpg" alt="Brad Ellis' LinkedIn image"> </img>
-              <p>Brad Ellis</p>
-              <p>General Manager Human Resources, Coles Supermarkets</p>
-            </div>
           </div>
         </div>
       </div>
