--- a/testimonials.html
+++ b/testimonials.html
@@ -21,7 +21,8 @@ description: Testimonials from our clients.
       <div class="testimonial-wrap">
         <div class="row">
           <div class="large-6 columns testimonial">
-            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Redering of Verdis Apartments, Brighton">
+            <caption>Rendering of <a href="{% post_url 2015-12-01-verdis-apartments-brighton %}">Verdis Apartments, Brighton</a></caption>
           </div>
           <div class="large-6 columns testimonial">
             <div class="quote">
@@ -42,6 +43,7 @@ description: Testimonials from our clients.
           <div class="flex-video widescreen">
             <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY" frameborder="0" allowfullscreen></iframe>
           </div>
+          <caption>Video interview a buyer of <a href="{% post_url 2014-12-01-otto-apartments-brunswick %}">Otto Apartments, Brunswick</a>, by Castran Gilbert</caption>
         </div>
       </div>
 
@@ -62,7 +64,8 @@ description: Testimonials from our clients.
             </div>
           </div>
           <div class="large-6 columns testimonial">
-            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Image Description">
+            <img class="thumbnail" src="{{site.url}}/img/projects/verdis/damgar-verdis-apartments-internal-render-living.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
+            <caption>Internal rendering of <a href="{% post_url 2015-12-01-verdis-apartments-brighton %}">Verdis Apartments, Brighton</a></caption>
           </div>
         </div>
       </div>
