Otto project copy, introduce img_dir variable to posts

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@ description: Damgar Property Group leads the market for small to medium resident
     <div class="large-6 xxlarge-4 columns project-listing">
       <a href="{{project.url}}" class="column">
         <div class="project-thumb-wrapper">
-          <div class="thumbnail project-thumb" style="background-image: url('{{site.url}}/img/demo_project_thumb.jpg');"></div>
+          <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
         </div>
         <h2 class="project-name">{{project.title}}</h2>
         <span class="project-location">{{project.location}}</span>
