--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ description: Damgar Property Group leads the market for small to medium resident
 <div class="row expanded">
   <br><br>
   {% for project in site.posts %}
-    <div class="large-6 xxlarge-4 columns project-listing">
+    <div class="large-6 columns project-listing">
       <a href="{{project.url}}" class="column">
         <div class="project-thumb-wrapper">
           <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
