--- a/testimonials.html
+++ b/testimonials.html
@@ -11,8 +11,7 @@ description: Testimonials from our clients.
 
       <div class="row">
         <div class="medium-8 columns">
-          <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah. Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah blah blah. </p>
-          <p>Hear what our clients have to say. These customers bought off the plan, etc. etc. blah blah. </p>
+          <p>Hear what our happy buyers have to say. These customers bought apartments off the plan, as investment properties as well as ??.</p>
         </div>
       </div>
 
@@ -30,24 +29,13 @@ description: Testimonials from our clients.
               <p>I was kept up to date right through the construction process and inspected the property prior to settlement. The apartment was in great condition and I have had tenants from day 1 who have been very happy with the property.</p>
             </div>
             <div class="testimonial-person">
-              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1c6/31e/24aba0c.jpg" alt="Brad Ellis' LinkedIn image"> </img>
+              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAh0AAAAJDY5NTJkOWRiLTU5NGItNGE0OS1hMWFmLWQxZTk3NTg5YjJkMg.jpg" alt="Brad Ellis' LinkedIn image"> </img>
               <p>Brad Ellis</p>
               <p>General Manager Human Resources, Coles Supermarkets</p>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="row testimonial-wrap">
-        <div class="large-8 columns small-centered">
-          <div class="flex-video widescreen">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <caption>Video interview a buyer of <a href="{% post_url 2014-12-01-otto-apartments-brunswick %}">Otto Apartments, Brunswick</a>, by Castran Gilbert</caption>
-        </div>
-      </div>
-
-      <br><br><br>
 
       <div class="testimonial-wrap">
         <div class="row">
@@ -69,6 +57,19 @@ description: Testimonials from our clients.
           </div>
         </div>
       </div>
+
+      <br><br>
+
+      <div class="row testimonial-wrap">
+        <div class="large-8 columns small-centered">
+          <caption>Video interview with a buyer of <a href="{% post_url 2014-12-01-otto-apartments-brunswick %}">Otto Apartments, Brunswick</a>, by Castran Gilbert</caption>
+          <div class="flex-video widescreen">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <br><br><br>
 
     </div>
   </div>
