--- a/projects.html
+++ b/projects.html
@@ -15,15 +15,19 @@ description: Damgar Property Group leads the market for small to medium resident
 
 <div class="row expanded">
   <br><br>
-  {% for project in site.posts %}
-    <div class="large-6 columns project-listing">
-      <a href="{{project.url}}" class="column">
-        <div class="project-thumb-wrapper">
-          <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
+
+    <div class="xlarge-11 small-centered">
+      {% for project in site.posts %}
+        <div class="large-6 columns project-listing">
+          <a href="{{project.url}}" class="column">
+            <div class="project-thumb-wrapper">
+              <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
+            </div>
+            <h2 class="project-name">{{project.title}}</h2>
+            <span class="project-location">{{project.location}}</span>
+          </a>
         </div>
-        <h2 class="project-name">{{project.title}}</h2>
-        <span class="project-location">{{project.location}}</span>
-      </a>
+      {% endfor %}
     </div>
-  {% endfor %}
+
 </div>
