--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@ description: Damgar Property Group leads the market for small to medium resident
         <div class="large-6 columns project-listing">
           <a href="{{project.url}}" class="column">
             <div class="project-thumb-wrapper">
+              <img class="project-hover-logo" src="/img/logo_d_white.png">
               <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
             </div>
             <h2 class="project-name">{{project.title}}</h2>
