--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,7 @@ description: Testimonials from our clients.
 
       <div class="row">
         <div class="medium-8 columns">
-          <p>Hear what our happy buyers have to say. These customers bought apartments off the plan, as investment properties as well as ??.</p>
+          <p>Hear what our happy buyers have to say.</p>
         </div>
       </div>
 
@@ -64,7 +64,7 @@ description: Testimonials from our clients.
         <div class="large-8 columns small-centered">
           <caption>Video interview with a buyer of <a href="{% post_url 2014-12-01-otto-apartments-brunswick %}">Otto Apartments, Brunswick</a>, by Castran Gilbert</caption>
           <div class="flex-video widescreen">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY" frameborder="0" allowfullscreen></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/anHZ1O_vqYY?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
