larger icon spacer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ keywords: property, developer, melbourne, apartments
 
 <div class="row">
   <div class="small-12 columns">
-    <i id="about" class="logo-spacer"></i>
+    <i id="about" class="logo-spacer large"></i>
 
     <h1>About Damgar</h1>
 
