first pass on material design click for CTA buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ keywords: property, developer, melbourne, apartments
 </div>
 
 <div class="row column">
-  <a class="large button cta main-cta" href="{{site.url}}/projects">SEE OUR <br> DEVELOPMENTS</a>
+  <div class="cta-wrap">
+    <a class="large button cta main-cta" href="{{site.url}}/projects">SEE OUR <br> DEVELOPMENTS</a>
+  </div>
 </div>
 
 <div class="row">
