--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,9 @@ description: Damgar Property Group leads the market for small to medium resident
           <a href="{{project.url}}" class="column">
             <div class="project-thumb-wrapper">
               <img class="project-hover-logo" src="/img/logo_d_white.png">
-              <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
+              <div class="thumbnail project-thumb">
+                <img src="{{project.feature_img}}" alt="{{project.title}}">
+              </div>
             </div>
             <h2 class="project-name">{{project.title}}</h2>
             <span class="project-location">{{project.location}}</span>
