--- a/index.html
+++ b/index.html
@@ -30,30 +30,52 @@ keywords: property, developer, melbourne, apartments
 </div>
 
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-11 medium-10 columns small-centered">
     <i id="about" class="logo-spacer large"></i>
 
     <h1>About Damgar</h1>
 
-    <div class="row">
-      <div class="medium-7 small-centered column">
-        <p class="lead">Established in 1988, Damgar Property Group stands alone with a 100% completion rate since the beginning.</p>
-        <p class="lead">Our dedication to ensuring our developments are fully viable from the outset means that our clients can purchase with peace of mind, knowing that their investment is rock solid.</p>
-      </div>
-    </div>
+    <p class="lead">Established in 1988, Damgar Property Group stands alone with a 100% completion rate since the beginning.</p>
+    <p class="lead">Our dedication to ensuring our developments are fully viable from the outset means that our clients can purchase with peace of mind, knowing that their investment is rock solid.</p>
 
     <br>
 
     <div class="row">
-      <div class="medium-7 small-centered">
-        <div class="medium-6 columns">
+
+        <div class="medium-4 columns">
           <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p>
         </div>
-        <div class="medium-6 columns">
+        <div class="medium-4 columns">
           <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
         </div>
-      </div>
+        <div class="medium-4 columns">
+          <p>As builders in our own right, with a keen eye to quality and liveability, we know what it takes to get the job done and done properly.</p>
+        </div>
+
     </div>
 
+  </div>
+</div>
+
+<div class="row">
+  <div class="medium-10 columns small-centered">
+    <i id="about" class="logo-spacer large"></i>
+
+    <h2 class="text-center">Directors</h2>
+
+    <div class="medium-6 columns callout large">
+      <p>
+        <strong>Gary Birrell</strong><br>
+        <em>Director of Sales and Marketing</em><br>
+        Gary&CloseCurlyQuote;s 30  year background in the trades and trade management has seen him effectively lead and inspire large teams of people to deliver superior results. Gary is responsible for ensuring that our developments meet not only our exacting standards of quality and sophistication but most importantly those of the ultimate buyer.
+      </p>
+    </div>
+    <div class="medium-6 columns callout large">
+      <p>
+        <strong>Damian Fraser</strong><br>
+        <em>Director of Operations</em><br>
+        Damian is a certified Master Builder with over 30 years experience in the construction and development industry and has a strong background in all phases of the development process. Damian is responsible for the planning and project management of our developments with a keen focus on bringing all projects in on budget and on time.
+      </p>
+    </div>
   </div>
 </div>
