Add contract page, gulp build improvements, more minor cleanup

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ keywords: property, developer, melbourne, apartments
         <h2 class="project-name">{{project.title}}</h2>
         <span class="project-location">{{project.location}}</span>
       </a>
-      <span class="project-label">Latest Development</span>
+      <span class="project-label">Latest Project</span>
     </div>
   </div>
 </div>
@@ -30,7 +30,7 @@ keywords: property, developer, melbourne, apartments
 </div>
 
 <div class="row">
-  <div class="small-11 medium-10 columns small-centered">
+  <div class="small-11 medium-8 columns small-centered">
     <i id="about" class="logo-spacer large"></i>
 
     <h1>About Damgar</h1>
