--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,8 @@ description: Damgar Property Group leads the market for small to medium resident
 
 <div class="row">
   <div class="medium-10 columns small-centered">
-    <div class="medium-9 columns">
-        <h1 class="text-left">Our Portfolio</h1>
-        <!-- <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p> -->
-    </div>
+    <h1 class="text-center">Our Portfolio</h1>
+    <!-- <p>Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne. We are a boutique developer which means that all of our developments have our complete focus from beginning to end.</p> -->
   </div>
 </div>
 
