swap directors, testimonal updates

--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,8 @@ description: Testimonials from our clients.
 
       <div class="row">
         <div class="medium-8 columns">
-          <p>Hear what our happy buyers have to say.</p>
+          <p>Damgar Property Group is a leading exponent of development management, offering clients a single liaison with experience in all aspects of the industry. </p>
+          <p>Our in-house team have an established track record with a number of industry consultant groups and sub-contactors ensuring that we are in a position to deliver a complete range of services effectively. We work with the individual strands of the property market and consolidate them, providing clients with a comprehensive approach that achieves the best results.</p>
         </div>
       </div>
 
@@ -19,9 +20,8 @@ description: Testimonials from our clients.
 
       <div class="testimonial-wrap">
         <div class="row">
-          <div class="large-6 columns testimonial">
+          <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
             <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Redering of Verdis Apartments, Brighton">
-            <caption>Rendering of <a href="{% post_url 2015-12-01-verdis-apartments-brighton %}">Verdis Apartments, Brighton</a></caption>
           </div>
           <div class="large-6 columns testimonial">
             <div class="quote">
@@ -51,9 +51,8 @@ description: Testimonials from our clients.
               <p>Chief Operating Officer, Fenner Dunlop Australia</p>
             </div>
           </div>
-          <div class="large-6 columns testimonial">
-            <img class="thumbnail" src="{{site.url}}/project-photos/verdis/damgar-verdis-apartments-internal-render-living.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
-            <caption>Internal rendering of <a href="{% post_url 2015-12-01-verdis-apartments-brighton %}">Verdis Apartments, Brighton</a></caption>
+          <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
+            <img class="thumbnail" src="{{site.url}}/project-photos/otto/damgar-otto-apartments-brunswick-00.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
           </div>
         </div>
       </div>
