--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@ description: Damgar Property Group leads the market for small to medium resident
 
     <div class="xlarge-11 small-centered">
       {% for project in site.posts %}
-        <div class="large-6 columns project-listing">
+        <div class="medium-6 columns project-listing">
           <a href="{{project.url}}" class="column">
             <div class="project-thumb-wrapper">
               <img class="project-hover-logo" src="/img/logo_d_white.png">
