--- a/index.html
+++ b/index.html
@@ -186,16 +186,16 @@
     <div class="row expanded">
       <div class="medium-6 columns callout">
         <p>
-          <strong>Gary Birrell</strong><br>
-          <em>Director of Sales and Marketing</em><br><br>
-          Gary&CloseCurlyQuote;s 30  year background in the trades and trade management has seen him effectively lead and inspire large teams of people to deliver superior results. Gary is responsible for ensuring that our developments meet not only our exacting standards of quality and sophistication but most importantly those of the ultimate buyer.
+          <strong>Damian Fraser</strong><br>
+          <em>Director of Operations</em><br><br>
+          Damian is a certified Master Builder with over 30 years experience in the construction and development industry and has a strong background in all phases of the development process. Damian is responsible for the planning and project management of our developments with a keen focus on bringing all projects in on budget and on time.
         </p>
       </div>
       <div class="medium-6 columns callout">
         <p>
-          <strong>Damian Fraser</strong><br>
-          <em>Director of Operations</em><br><br>
-          Damian is a certified Master Builder with over 30 years experience in the construction and development industry and has a strong background in all phases of the development process. Damian is responsible for the planning and project management of our developments with a keen focus on bringing all projects in on budget and on time.
+          <strong>Gary Birrell</strong><br>
+          <em>Director of Sales and Marketing</em><br><br>
+          Gary&CloseCurlyQuote;s 30  year background in the trades and trade management has seen him effectively lead and inspire large teams of people to deliver superior results. Gary is responsible for ensuring that our developments meet not only our exacting standards of quality and sophistication but most importantly those of the ultimate buyer.
         </p>
       </div>
     </div>
@@ -288,8 +288,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
