--- a/project-photos/malvern-village/index.html
+++ b/project-photos/malvern-village/index.html
@@ -164,20 +164,6 @@
         </a>
     </div>
 
-    <div class="gallery-image-wrapper">
-        <a name="damgar-malvern-village-3.jpg"></a>
-        <a href="damgar-malvern-village-3.jpg">
-            <img class="gallery-image" src="thumbs/damgar-malvern-village-3.jpg" />
-        </a>
-    </div>
-
-    <div class="gallery-image-wrapper">
-        <a name="damgar-malvern-village-4.jpg"></a>
-        <a href="damgar-malvern-village-4.jpg">
-            <img class="gallery-image" src="thumbs/damgar-malvern-village-4.jpg" />
-        </a>
-    </div>
-
 
   </div>
 </div>
@@ -268,8 +254,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
