--- a/project-photos/verdis/index.html
+++ b/project-photos/verdis/index.html
@@ -178,6 +178,13 @@
         </a>
     </div>
 
+    <div class="gallery-image-wrapper">
+        <a name="damgar-verdis-04.jpg"></a>
+        <a href="damgar-verdis-04.jpg">
+            <img class="gallery-image" src="thumbs/damgar-verdis-04.jpg" />
+        </a>
+    </div>
+
 
   </div>
 </div>
@@ -268,8 +275,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
