--- a/page-foundation-example/index.html
+++ b/page-foundation-example/index.html
@@ -401,8 +401,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
