--- a/project-photos/index.html
+++ b/project-photos/index.html
@@ -147,7 +147,7 @@
         <img class="gallery-best-image" src="Verdis/thumbs/damgar-verdis-00.jpg">
     </a>
     <h3><a href="Verdis">Verdis</a></h3>
-    4 images
+    5 images
 </div>
 
 <div class="gallery-wrapper">
@@ -187,7 +187,7 @@
         <img class="gallery-best-image" src="Malvern Village/thumbs/damgar-malvern-village-1.jpg">
     </a>
     <h3><a href="Malvern Village">Malvern Village</a></h3>
-    4 images
+    2 images
 </div>
 
 
@@ -280,8 +280,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
