--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -135,7 +135,8 @@
 
       <div class="row">
         <div class="medium-8 columns">
-          <p>Hear what our happy buyers have to say.</p>
+          <p>Damgar Property Group is a leading exponent of development management, offering clients a single liaison with experience in all aspects of the industry. </p>
+          <p>Our in-house team have an established track record with a number of industry consultant groups and sub-contactors ensuring that we are in a position to deliver a complete range of services effectively. We work with the individual strands of the property market and consolidate them, providing clients with a comprehensive approach that achieves the best results.</p>
         </div>
       </div>
 
@@ -143,9 +144,8 @@
 
       <div class="testimonial-wrap">
         <div class="row">
-          <div class="large-6 columns testimonial">
+          <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
             <img class="thumbnail" src="http://damgar.nathanbirrell.me/img/demo_project_thumb.jpg" alt="Redering of Verdis Apartments, Brighton">
-            <caption>Rendering of <a href="/portfolio/verdis-apartments-brighton/">Verdis Apartments, Brighton</a></caption>
           </div>
           <div class="large-6 columns testimonial">
             <div class="quote">
@@ -175,9 +175,8 @@
               <p>Chief Operating Officer, Fenner Dunlop Australia</p>
             </div>
           </div>
-          <div class="large-6 columns testimonial">
-            <img class="thumbnail" src="http://damgar.nathanbirrell.me/project-photos/verdis/damgar-verdis-apartments-internal-render-living.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
-            <caption>Internal rendering of <a href="/portfolio/verdis-apartments-brighton/">Verdis Apartments, Brighton</a></caption>
+          <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
+            <img class="thumbnail" src="http://damgar.nathanbirrell.me/project-photos/otto/damgar-otto-apartments-brunswick-00.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
           </div>
         </div>
       </div>
@@ -200,13 +199,10 @@
 </div>
 
 
-  
-
 <div class="row">
-  <br>
-  <div class="medium-12 small-centered column">
+  <div class="small-11 medium-10 small-centered column">
     <h3>Recent Projects</h3>
-    <br>
+    <span></span>
 
     
         <div class="large-6 columns project-listing recent-projects">
@@ -325,8 +321,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.js"></script>
-    <!-- <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script> -->
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
