--- a/portfolio/verdis-apartments-brighton/index.html
+++ b/portfolio/verdis-apartments-brighton/index.html
@@ -171,6 +171,15 @@
             <!-- </a> -->
         </figure>
     
+        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <!-- <a href="/project-photos/verdis/damgar-verdis-04.jpg" itemprop="contentUrl" data-size="533x800"> -->
+              <div class="thumbnail project-thumb">
+                <img src="/project-photos/verdis/thumbs/damgar-verdis-04.jpg" class="thumbnail project-thumb" itemprop="thumbnail" alt="damgar-verdis-04.jpg" title="damgar-verdis-04.jpg" />
+              </div>
+              <!-- <figcaption itemprop="caption description">damgar-verdis-04.jpg</figcaption> -->
+            <!-- </a> -->
+        </figure>
+    
 </div>
 
     </div>
